Fix z-index issue on project panels

--- a/app/ui/src/Pages/Project/Project.module.scss
+++ b/app/ui/src/Pages/Project/Project.module.scss
@@ -25,7 +25,7 @@
   height: 100%;
   width: 100%;
   pointer-events: none;
-  z-index: 999;
+  z-index: 6;
 }
 
 .panels {
